--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <link rel='stylesheet' type='text/css' href='styles.css'>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://d3js.org/d3-timer.v1.min.js"></script>
   </head>
   <body>
     <div class="scoreboard">
@@ -21,6 +22,7 @@
       <div class="mouse"></div>
     </div>
     <script src="lib/d3.js" charset="utf-8"></script>
+    <script src="https://d3js.org/d3-timer.v1.min.js"></script>
     <script src='watchout.js'></script>
   </body>
 </html>
