--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,8 @@
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://d3js.org/d3-timer.v1.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+
   </head>
   <body>
     <div class="scoreboard">
